# chatactor

./: LICENSE  README.md  babyagi.py  chatactor.py  home.py  main.py  profiler.py  pyproject.toml  wiki.py  지원서.pages
assets/: general_yi.json  king_sejong.json
chatactor/: __init__.py  agent.py  chatactor.py  model.py  newactor.py  profiler.py  wikipedia.py
functional/: component.py  page.py  pages.py  search_images.py  utils.py  variables.py
pages/: actors.py  characters.py  chat.py
profiles/: J. Robert Oppenheimer.json  김좌진.json  김좌진.md  로버트 오펜하이머.json  로버트 오펜하이머.md  박보검.json  박보검.md  세종.json  세종.md  세종대왕.json  유관순.json  유관순.md  이순신.json  이순신.md  일론 머스크.json
