[tool.poetry]
name = "chat-actor"
version = "0.1.0"
description = ""
authors = ["heonjin <87924725+kwon-evan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatactor"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.268"
openai = "^0.27.8"
watchdog = "^3.0.0"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
