[tool.poetry]
name = "chat-actor"
version = "0.1.0"
description = ""
authors = ["heonjin <87924725+kwon-evan@users.noreply.github.com>", "minocrafft <minocrafft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatactor"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.268"
openai = "^0.27.8"
watchdog = "^3.0.0"
streamlit = "^1.25.0"
duckduckgo-search = "^3.8.5"
wikipedia = "^1.4.0"
langchain-experimental = "^0.0.10"
streamlit-chat = "^0.1.1"
streamlit-extras = "^0.3.0"
pydantic = "^2.3.0"
streamlit-card = "^0.0.61"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
