[tool.poetry]
name = "chatactor"
version = "0.2.0"
description = ""
authors = ["heonjin <87924725+kwon-evan@users.noreply.github.com>", "minocrafft <minocrafft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatactor"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.353"
openai = "^1.6.1"
watchdog = "^3.0.0"
streamlit = "^1.26.0"
duckduckgo-search = "^3.8.5"
wikipedia = "^1.4.0"
langchain-experimental = "^0.0.47"
streamlit-chat = "^0.1.1"
streamlit-extras = "^0.3.0"
pydantic = "^2.5.3"
streamlit-card = "^0.0.61"
wikipedia-api = "^0.6.0"
html2text = "^2020.1.16"
tiktoken = "^0.5.2"
faiss-cpu = "^1.7.4"
docarray = "^0.40.0"
langchain-nvidia-ai-endpoints = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
